--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tp2">
-        <activity android:name=".LoadingServerActivity"></activity>
-        <activity android:name=".GameActivity" />
+        <activity android:name=".Loading.LoadingActivity"></activity>
+        <activity android:name=".Game.GameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
