Compilavel, para meter o mapa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tp2">
         <activity
-            android:name=".TestDB"
-            android:label="@string/title_activity_test_d_b"
-            android:theme="@style/Theme.Tp2.NoActionBar"></activity>
+                android:name=".TestDB"
+                android:label="@string/title_activity_test_d_b"
+                android:theme="@style/Theme.Tp2.NoActionBar"/>
         <activity android:name=".Loading.LoadingActivity" />
         <activity android:name=".Game.GameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
