--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,13 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD6xNnWk8E9wEB4vTGTdmnVpOQ9wQto0Dc" />
 
-        <activity android:name=".Game.GameActivity"></activity>
+
         <activity
             android:name=".TestDB"
             android:label="@string/title_activity_test_d_b"
             android:theme="@style/Theme.Tp2.NoActionBar" />
         <activity android:name=".Loading.LoadingActivity" />
+        <activity android:name=".Game.GameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
