--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,9 +35,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".GameActivity"
-            android:label="@string/title_activity_game"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -48,7 +45,10 @@
             android:label="@string/title_activity_test_d_b"
             android:theme="@style/Theme.Tp2.NoActionBar" />
         <activity android:name=".Loading.LoadingActivity" />
-        <activity android:name=".Game.GameActivityFailed" />
+
+        <activity
+            android:name=".Game.GameActivity"
+            android:label="@string/title_activity_game" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
